--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <button id="ButtonAdvancedQuality" class="float-left submit-button">Advanced Quality test</button>
     <script type="text/javascript">
         document.getElementById("ButtonBeginnerTuring").onclick = function () {
-            location.href = "D:/hons project/SECOND/HC3 dataset/beginnerturing.html";
+            location.href = "beginnerturing.html";
         };
         document.getElementById("ButtonAdvancedTuring").onclick = function () {
-            location.href = "D:/hons project/SECOND/HC3 dataset/advancedturing.html";
+            location.href = "advancedturing.html";
         };
         document.getElementById("ButtonBeginnerQuality").onclick = function () {
-            location.href = "D:/hons project/SECOND/HC3 dataset/beginnerquality.html";
+            location.href = "beginnerquality.html";
         };
         document.getElementById("ButtonAdvancedQuality").onclick = function () {
-            location.href = "D:/hons project/SECOND/HC3 dataset/advancedquality.html";
+            location.href = "advancedquality.html";
         };
     </script>
 </body>
