--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <body>
-    <p id="p1">Do you consider yourself a beginner ChatGPT user or an advanced one?</p>
+    <p id="p1">Are you familiar with what ChatGPT is and how it works? If not, choose beginner. If yes, choose advanced.</p>
     <p id="p1">Do you want to do a Turing test or a quality test?</p>
     <button id="ButtonBeginnerTuring" class="float-left submit-button">Beginner Turing test</button>
     <button id="ButtonAdvancedTuring" class="float-left submit-button">Advanced Turing test</button>
