--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <p>This is a <strong>replication</strong> of a human evaluation experiment on data from a natural language model(ChatGPT) that I found in a scientific paper</p>
     <p><strong><a href="https://arxiv.org/pdf/2301.07597v1.pdf" target=”_blank”>Here</a></strong>'s a link to the original paper</p>
     <p>A huge thank you to the original authors of the paper.</p>
+    <p>Please ignore any extra slashes, quotation marks and questionable punctuation.</p>
     <script type="text/javascript">
         document.getElementById("ButtonBeginnerTuring").onclick = function () {
             location.href = "beginnerturing.html";
