--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <button id="ButtonBeginnerQuality" class="float-left submit-button">Beginner Quality test</button>
     <button id="ButtonAdvancedQuality" class="float-left submit-button">Advanced Quality test</button>
     <br><br>
-    <p>This is a <strong>replication</strong> of a human evaluation experiment that I found in a scientific paper</p>
-    <p><strong><a href="https://arxiv.org/pdf/2301.07597v1.pdf" target=”_blank”>Here</a></strong>'s a link to the original paper</p>
+    <p>This is a <strong>replication</strong> of a human evaluation experiment that I found in a scientific paper.</p>
+    <p><strong><a href="https://arxiv.org/pdf/2301.07597v1.pdf" target=”_blank”>Here</a></strong>'s a link to the original paper.</p>
     <p>A huge thank you to the original authors of the paper.</p>
     <p>Please ignore any extra slashes, quotation marks and questionable punctuation.</p>
     <script type="text/javascript">
