--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <br><br>
     <p>This is a <strong>replication</strong> of a human evaluation experiment that I found in a scientific paper.</p>
     <p><strong><a href="https://arxiv.org/pdf/2301.07597v1.pdf" target=”_blank”>Here</a></strong>'s a link to the original paper.</p>
-    <p>A huge thank you to the original authors of the paper.</p>
+    <p>A huge thank you to the authors of the paper.</p>
     <p>Please ignore any extra slashes, quotation marks and questionable punctuation.</p>
     <script type="text/javascript">
         document.getElementById("ButtonBeginnerTuring").onclick = function () {
