--- a/index.html
+++ b/index.html
@@ -2,30 +2,30 @@
 <html>
 
 <body>
-    <p id="p1">Are you familiar with what ChatGPT is and how it works? If not, choose beginner. If yes, choose advanced.</p>
-    <p id="p1">Do you want to do a Turing test or a quality test?</p>
+    <p id="p1"><strong>Do you consider yourself a beginner ChatGPT user or an advanced one?</strong></p>
+    <p id="p1"><strong>Do you want to do a Turing test or a Helpfulness test?</strong></p>
     <button id="ButtonBeginnerTuring" class="float-left submit-button">Beginner Turing test</button>
     <button id="ButtonAdvancedTuring" class="float-left submit-button">Advanced Turing test</button>
     <p></p>
-    <button id="ButtonBeginnerQuality" class="float-left submit-button">Beginner Quality test</button>
-    <button id="ButtonAdvancedQuality" class="float-left submit-button">Advanced Quality test</button>
+    <button id="ButtonBeginnerHelpfulness" class="float-left submit-button">Beginner Helpfulness test</button>
+    <button id="ButtonAdvancedHelpfulness" class="float-left submit-button">Advanced Helpfulness test</button>
     <br><br>
-    <p>This is a <strong>replication</strong> of a human evaluation experiment that I found in a scientific paper.</p>
-    <p><strong><a href="https://arxiv.org/pdf/2301.07597v1.pdf" target=”_blank”>Here's a link to the original paper.</a></strong></p>
-    <p>A huge thank you to the authors of the paper.</p>
+    <p>This is a <strong>replication</strong> of a human evaluation experiment on data from a natural language model(ChatGPT) that I found in a scientific paper</p>
+    <p><strong><a href="https://arxiv.org/pdf/2301.07597v1.pdf" target=”_blank”>Here</a></strong>'s a link to the original paper</p>
+    <p>A huge thank you to the original authors of the paper.</p>
     <p>Please ignore any extra slashes, quotation marks and questionable punctuation.</p>
     <script type="text/javascript">
         document.getElementById("ButtonBeginnerTuring").onclick = function () {
-            location.href = "beginnerturing.html";
+            location.href = "D:/hons project/SECOND/HC3 dataset/beginnerturing.html";
         };
         document.getElementById("ButtonAdvancedTuring").onclick = function () {
-            location.href = "advancedturing.html";
+            location.href = "D:/hons project/SECOND/HC3 dataset/advancedturing.html";
         };
-        document.getElementById("ButtonBeginnerQuality").onclick = function () {
-            location.href = "beginnerquality.html";
+        document.getElementById("ButtonBeginnerHelpfulness").onclick = function () {
+            location.href = "D:/hons project/SECOND/HC3 dataset/beginnerhelpfulness.html";
         };
-        document.getElementById("ButtonAdvancedQuality").onclick = function () {
-            location.href = "advancedquality.html";
+        document.getElementById("ButtonAdvancedHelpfulness").onclick = function () {
+            location.href = "D:/hons project/SECOND/HC3 dataset/advancedhelpfulness.html";
         };
     </script>
 </body>
