--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 
 <body>
-    <p id="p1"><strong>Do you consider yourself a beginner ChatGPT user or an advanced one?</strong></p>
-    <p id="p1"><strong>Do you want to do a Turing test or a Helpfulness test?</strong></p>
+    <p><strong>Do you consider yourself a beginner ChatGPT user or an advanced one?</strong></p>
+    <p><strong>Do you want to do a Turing test or a Helpfulness test?</strong></p>
+    <p><strong>A turing test is a test of a machine's(in this case, ChatGPT) ability to exhibit 'intelligent' behaviour indistinguishable from that of a human.</strong></p>
+    <p><strong>A </p>
     <button id="ButtonBeginnerTuring" class="float-left submit-button">Beginner Turing test</button>
     <button id="ButtonAdvancedTuring" class="float-left submit-button">Advanced Turing test</button>
     <p></p>
