--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-
+<head>
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+</head>
 <body>
     <p><strong>Do you consider yourself an expert ChatGPT user or an amateur one?</strong></p>
     <p>An amateur is someone who has not used(or barely used) ChatGPT.</p>
