--- a/expertturingtestpaired.html
+++ b/expertturingtestpaired.html
@@ -31,7 +31,7 @@
     <button type="button" id="loadnewbutton" class="btn btn-primary">Skip this example and load a new one</button>
     <p><br></p>
     <button type="button" id="endbutton" class="btn btn-primary">Complete this instance of the study and exit</button>
-    <script src='scriptadvancedturing.js'></script>
+    <script src='scriptexpertturingtestpaired.js'></script>
 </body>
 
 </html>
