--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
-</head>
+
 <body>
     <p><strong>Do you consider yourself an expert ChatGPT user or an amateur one?</strong></p>
     <p>An amateur is someone who has not used(or barely used) ChatGPT.</p>
@@ -23,16 +21,16 @@
     <p>Please ignore any extra slashes, quotation marks and questionable punctuation.</p>
     <script type="text/javascript">
         document.getElementById("ExpertTuringTestPaired").onclick = function () {
-            location.href = "expertturingtestpaired.html";
+            location.href = "D:/hons project/SECOND/HC3 dataset/expertturingtestpaired.html";
         };
         document.getElementById("ExpertTuringTestSingle").onclick = function () {
-            location.href = "expertturingtestsingle.html";
+            location.href = "D:/hons project/SECOND/HC3 dataset/expertturingtestsingle.html";
         };
         document.getElementById("ButtonBeginnerHelpfulness").onclick = function () {
-            location.href = "amateurturingtest.html";
+            location.href = "D:/hons project/SECOND/HC3 dataset/amateurturingtest.html";
         };
         document.getElementById("ButtonHelpfulness").onclick = function () {
-            location.href = "helpfulness.html";
+            location.href = "D:/hons project/SECOND/HC3 dataset/helpfulness.html";
         };
     </script>
 </body>
