--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
     <p>Please ignore any extra slashes, quotation marks and questionable punctuation.</p>
     <script type="text/javascript">
         document.getElementById("ExpertTuringTestPaired").onclick = function () {
-            location.href = "D:/hons project/SECOND/HC3 dataset/expertturingtestpaired.html";
+            location.href = "expertturingtestpaired.html";
         };
         document.getElementById("ExpertTuringTestSingle").onclick = function () {
-            location.href = "D:/hons project/SECOND/HC3 dataset/expertturingtestsingle.html";
+            location.href = "expertturingtestsingle.html";
         };
         document.getElementById("ButtonBeginnerHelpfulness").onclick = function () {
-            location.href = "D:/hons project/SECOND/HC3 dataset/amateurturingtest.html";
+            location.href = "amateurturingtest.html";
         };
         document.getElementById("ButtonHelpfulness").onclick = function () {
-            location.href = "D:/hons project/SECOND/HC3 dataset/helpfulness.html";
+            location.href = "helpfulness.html";
         };
     </script>
 </body>
