--- a/amateurturingtest.html
+++ b/amateurturingtest.html
@@ -28,7 +28,7 @@
     <button type="button" id="loadnewbutton" class="btn btn-primary">Skip this example and load a new one</button>
     <p><br></p>
     <button type="button" id="endbutton" class="btn btn-primary">Complete this instance of the study and exit</button>
-    <script src='scriptexpertturingsingle.js'></script>
+    <script src='scriptamateurturingtest.js'></script>
 </body>
 
 </html>
