--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     <p>Please ignore any extra slashes, quotation marks and questionable punctuation.</p>
     <script type="text/javascript">
         document.getElementById("ExpertTuringTestPaired").onclick = function () {
-            location.href = "expertturingtestpaired.html";
+            location.href = "expertpaired.html";
         };
         document.getElementById("ExpertTuringTestSingle").onclick = function () {
-            location.href = "expertturingtestsingle.html";
+            location.href = "expertsingle.html";
         };
         document.getElementById("ButtonBeginnerHelpfulness").onclick = function () {
-            location.href = "amateurturingtest.html";
+            location.href = "amateur.html";
         };
         document.getElementById("ButtonHelpfulness").onclick = function () {
             location.href = "helpfulness.html";
