--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <br><br>
     <button id="ButtonBeginnerHelpfulness" class="float-left submit-button">Amateur Turing test single text</button>
     <br><br>
-    <p>In the helpfulness test, you will be asked to rate a response on a scale from 1 to 5:</p>
+    <p>In the helpfulness test, you will be asked to choose which of the two responses is more helpful.</p>
     <button id="ButtonHelpfulness" class="float-left submit-button">Helpfulness test</button>
     <br><br>
     <p>This is a <strong>replication</strong> of a human evaluation experiment on data from a natural language model(ChatGPT) that I found in a scientific paper.</p>
