--- a/thankyou.html
+++ b/thankyou.html
@@ -5,7 +5,13 @@
         </title>
     </head>
     <body>
+        <button id="again" class="float-left submit-button">I want to complete another one!</button>
         <p>Thank you for participating. Your response was recorded.</p>
         <p><a href="https://www.iflscience.com/people-are-surprised-to-learn-that-capybaras-can-swim-majestically-underwater-65379"><img style='height: 100%; width: 100%; object-fit: contain' src="https://assets.iflscience.com/assets/articleNo/65379/aImg/62042/capybara-at-sunset-meta.png"></a>
     </body>
+        <script type="text/javascript">
+        document.getElementById("again").onclick = function () {
+            location.href = "index.html";
+        };
+        </script>
 </html>
